--- a/Makefile.gpdb
+++ b/Makefile.gpdb
@@ -1,13 +1,73 @@
-GPDB_RELEASE ?= 7
+# only support building in pgxs mode
+USE_PGXS = 1
+
+GPDB_REPO ?= https://raw.githubusercontent.com/greenplum-db/gpdb
 top_builddir ?= $(HOME)/src/gpdb-$(GPDB_RELEASE).git
+
+# the pgxs makefiles provide some version variables like below:
+#
+#     MAJORVERSION = 12
+#     GP_MAJORVERSION = 7
+#
+# however we need them before including the makefiles, so we have to guess them
+# manually with pg_config
+PG_CONFIG_MAJOR_VERSION = \
+	$(shell pg_config --version \
+	  | egrep --only-matching '[0-9]+(\.[0-9]+)?' \
+	  | head -n1)
+
+ifeq ($(PG_CONFIG_MAJOR_VERSION),)
+$(error cannot detect gpdb version with pg_config)
+endif # PG_CONFIG_MAJOR_VERSION
+
+ifeq ($(PG_CONFIG_MAJOR_VERSION),8.3)
+	GPDB_RELEASE = 5
+	GPDB_COMMIT = 5.25.0
+	# pg_control has incompatible formats between gpdb major versions
+	REGRESS += gpdb-$(GPDB_RELEASE)-control
+endif # PG_CONFIG_MAJOR_VERSION
+
+ifeq ($(PG_CONFIG_MAJOR_VERSION),9.4)
+	GPDB_RELEASE = 6
+	GPDB_COMMIT = 6.10.1
+	# pg_control has incompatible formats between gpdb major versions
+	REGRESS += gpdb-$(GPDB_RELEASE)-control
+endif # PG_CONFIG_MAJOR_VERSION
+
+ifeq ($(PG_CONFIG_MAJOR_VERSION),9.6)
+	# gpdb-7, postgres-9.6 based
+	GPDB_RELEASE = 7
+	GPDB_COMMIT = fde7fa001136160d980efec44674435243a5619f
+	# pg_control has incompatible formats between gpdb major versions
+	REGRESS += gpdb-7_9.6-control
+endif # PG_CONFIG_MAJOR_VERSION
+
+ifeq ($(PG_CONFIG_MAJOR_VERSION),12)
+	# gpdb-7, postgres-12 based
+	GPDB_RELEASE = 7
+	GPDB_COMMIT = 624f460cee5d3e5d9fc71b8cbbb399f2ee9acfe1
+	# pg_control has incompatible formats between gpdb major versions
+	REGRESS += gpdb-7_12-control
+endif # PG_CONFIG_MAJOR_VERSION
+
+ifeq ($(GPDB_COMMIT),)
+$(error unsupported gpdb version: $(shell pg_config --version))
+endif # GPDB_COMMIT
+
+# DOWNLOADER takes 2 arguments at the tail, the first is the target output
+# path, the second is the url.
+#
+# Note that github does not allow ranged downloading, so do not try to resume
+# an incomplete download.
+DOWNLOADER ?= curl --silent --output
 
 PROGRAM = pg_filedump
 OBJS	= decode.o pg_filedump.o stringinfo.o
 
 DOCS = README.pg_filedump
+DOCS += README.gpdb.md
 
-LINKDIR := links
-
+LINKDIR := gpdb_$(GPDB_RELEASE)_$(PG_CONFIG_MAJOR_VERSION)
 PKG_CONFIG ?= pkg-config --define-prefix --silence-errors
 
 # auto detect zlib if not explicitly specified
@@ -41,6 +101,21 @@ $(error cannot find libzstd)
 endif # ENABLE_ZSTD
 
 # auto detect quicklz if not explicitly specified
+#
+# this only works if the quicklz package is detected with pkg-config, however
+# this is not usually the case, quicklz is not shipped on most linux
+# distributions.
+#
+# on the other hand, the gpdb official released packages has built-in quicklz,
+# but we are unable to use them:
+#
+# - gpdb-5 links quicklz code into the postgres binary directly, so it is
+#   impossible for us to link separately;
+# - gpdb-6 provides the libquicklz shared libraries, but without header files,
+#   and we cannot include the header files in the pg_filedump tree due to
+#   license issue;
+#
+# so in general the quicklz support will be missing in an end-user build.
 ifndef ENABLE_QUICKLZ
 	ENABLE_QUICKLZ = $(shell $(PKG_CONFIG) --exists quicklz && echo y || echo n)
 
@@ -85,6 +160,10 @@ $(error cannot find quicklz package or source code)
 	endif
 endif # ENABLE_QUICKLZ
 
+$(info ENABLE_ZLIB: $(ENABLE_ZLIB))
+$(info ENABLE_ZSTD: $(ENABLE_ZSTD))
+$(info ENABLE_QUICKLZ: $(ENABLE_QUICKLZ))
+
 LINKS += src/backend/utils/adt/numutils.c
 LINKS += src/backend/access/common/heaptuple.c
 LINKS += src/backend/cdb/cdbappendonlystorageformat.c
@@ -107,9 +186,6 @@ else # GPDB_RELEASE
 	REGRESS += gpdb-6-common
 	REGRESS += gpdb-7-common
 endif # GPDB_RELEASE
-
-# pg_control has incompatible formats between gpdb major versions
-REGRESS += gpdb-$(GPDB_RELEASE)-control
 
 ifeq ($(ENABLE_ZLIB),y)
 	REGRESS += gpdb-4-zlib
@@ -144,21 +220,19 @@ endif
 # avoid linking against all libs that the server links against (xml, selinux, ...)
 LIBS = $(libpq_pgport)
 
-$(LINKSRCS): $(LINKDIR)/timestamp
+$(LINKSRCS): $(LINKDIR)/timestamp.$(GPDB_COMMIT)
 
-$(LINKDIR)/timestamp:
+$(LINKDIR)/timestamp.$(GPDB_COMMIT):
 	rm -rf $(LINKDIR)
 	mkdir -p $(dir $(LINKSRCS))
 	rm -f $(LINKSRCS)
-ifdef USE_PGXS
-	# TODO: fetch the source code from github
-endif # USE_PGXS
-	$(foreach f,$(LINKS),$(LN_S) $(top_srcdir)/$f $(LINKDIR)/$f;)
+	$(foreach f,$(LINKS),$(DOWNLOADER) \
+		$(LINKDIR)/$f \
+		$(GPDB_REPO)/$(GPDB_COMMIT)/$f;)
 	touch $@
 
-# the make variable EXTRA_CLEAN can be used to set extra clean, however dirs
-# cannot be correctly removed until gpdb 6, so we have to do the job manually.
-.PHONY: extra-clean
-clean: extra-clean
-extra-clean:
-	-rm -rf $(LINKDIR)
+# always redownload all the files
+.PHONY: download
+download:
+	rm -rf $(LINKDIR)
+	$(MAKE) -f $(firstword $(MAKEFILE_LIST)) $(LINKDIR)/timestamp.$(GPDB_COMMIT)
